Kubernetes/Uptimekuma/yamls/ir-uptimekuma.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: uptimekuma-basic-auth
  namespace: monitoring
spec:
  basicAuth:
    secret: uptimekuma-basic-auth
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: uptimekuma-https-redirect
  namespace: monitoring
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: uptimekuma-security
  namespace: monitoring
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: uptimekuma-websecure
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`uptimekuma.domain.com`)
    kind: Rule
    services:
    - name: uptime-kuma
      port: 3001
    middlewares:
    - name: uptimekuma-security
  tls:
    secretName: uptimekuma-ssl-cert
    options:
      name: uptimekuma-tlsoptions
      namespace: monitoring
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: uptimekuma-web
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`uptimekuma.domain.com`)
    kind: Rule
    services:
    - name: uptime-kuma
      port: 3001
    middlewares:
      - name: uptimekuma-https-redirect
